# medulla

./: .gitignore  Cargo.toml  README.md  install.sh  openapi.yaml
.github/workflows/: ci.yml  release.yml
docs/: prd.md
docs/branding/: README.md  colors.md  logo.md  typography.md  visual.md  voice.md
docs/plans/: 2025-01-30-scaffold-rust-project.md  2025-01-31-phase2-mcp-server-design.md  2025-01-31-remaining-entity-types.md  2026-02-03-phase4-snapshot-git-integration.md
homebrew/: medulla.rb.template
npm/: install.js  package.json
src/: error.rs  lib.rs  main.rs  warnings.rs
src/cache/: mod.rs  sqlite_cache.rs
src/cli/: commands.rs  handlers.rs  mod.rs
src/embeddings/: config.rs  mod.rs
src/entity/: component.rs  decision.rs  link.rs  mod.rs  note.rs  prompt.rs  relation.rs  task.rs
src/mcp/: error.rs  mod.rs  resources.rs  tools.rs
src/search/: mod.rs
src/snapshot/: component.rs  decision.rs  link.rs  mod.rs  note.rs  prompt.rs  readme.rs  task.rs  utils.rs
src/storage/: loro_store.rs  mod.rs
tests/: integration_test.rs
