[package]
name = "medulla"
version = "0.1.0"
edition = "2021"
description = "A git-native, AI-accessible knowledge engine for software projects"
license = "MIT"
repository = "https://github.com/jordanstella/medulla"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# CRDT
loro = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
atty = "0.2"

# Cache / Search
rusqlite = { version = "0.32", features = ["bundled"] }

# Embeddings
fastembed = "4"

# MCP Server
rmcp = { version = "0.14", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
